tests/purs/failing/DeriveClauseKindMismatch.out
Error found:
in module [33mMain[0m
at tests/purs/failing/DeriveClauseKindMismatch.purs:7:11 - 7:13 (line 7, column 11 - line 7, column 13)

  Could not match kind
  [33m              [0m
  [33m  Type -> Type[0m
  [33m              [0m
  with kind
  [33m      [0m
  [33m  Type[0m
  [33m      [0m

while checking that type [33mBox[0m
  has kind [33mType[0m
while inferring the kind of [33mEq Box[0m
in type class instance
[33m                [0m
[33m  Data.Eq.Eq Box[0m
[33m                [0m

See https://github.com/purescript/documentation/blob/master/errors/KindsDoNotUnify.md for more information,
or to contribute content related to this error.

